fix: fix tool_indexation CSS issue where lang selector and buttons are no displayed correctly on component activation (z-index)

--- a/tools/tool_indexation/css/tool_indexation.less
+++ b/tools/tool_indexation/css/tool_indexation.less
@@ -197,12 +197,14 @@
 
 				// lang selector
 				>.selector {
-					padding: 0px;
-					width: auto;
-					margin-bottom: 0.5rem;
 					position: absolute;
 					top: 1px;
 					right: 0.5rem;
+					padding: 0px;
+					padding-right: 1.2rem;
+					padding-left: 0.5rem;
+					width: auto;
+					margin-bottom: 0.5rem;
 					font-size: 0.96rem;
 					height: 1.85rem;
 					z-index: 2;
@@ -214,7 +216,7 @@
 
 					>.buttons_container {
 						top: 0;
-						z-index: 2;
+						z-index: 4;
 						border-radius: 0;
 					}
 
